Fix the search in dark mode

--- a/assets/css/components/search.css
+++ b/assets/css/components/search.css
@@ -16,6 +16,10 @@
   outline-offset: -2px;
 }
 
+.dark .Search__input {
+  background-color: #222;
+}
+
 .Search__input:focus {
   outline: 0;
   border-bottom-style: double;
